# syndatakit

./: .gitignore  BULK_DOWNLOAD.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Makefile  PUBLISH.md  README.md  index.html  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  new_dataset.md
.github/workflows/: ci.yml  publish.yml  test.yml
examples/: 01_credit_risk.py  02_macro_scenarios.py  03_privacy_audit.py  04_api_usage.py  README.md
paper/: paper.bib  paper.md
syndatakit/: __init__.py  api.py  cli.py
syndatakit/calibration/: __init__.py  moment_matching.py  priors.py  scenario.py
syndatakit/catalog/: __init__.py  downloader.py  loader.py
syndatakit/fidelity/: __init__.py  causality.py  downstream.py  joint.py  marginal.py  report.py  stylized_facts.py
syndatakit/fidelity/temporal/: __init__.py  breaks.py  cointegration.py  stationarity.py
syndatakit/generators/: __init__.py  base.py
syndatakit/generators/cross_sectional/: __init__.py  dp_gaussian_copula.py  gaussian_copula.py  vine_copula.py
syndatakit/generators/deep/: __init__.py  ctgan.py
syndatakit/generators/panel/: __init__.py  fixed_effects.py
syndatakit/generators/time_series/: __init__.py  var.py  vecm_garch.py
syndatakit/io/: __init__.py  formats.py  validators.py
syndatakit/privacy/: __init__.py  audit.py  disclosure.py  dp.py  linkability.py  singling_out.py
tests/: test_v2.py
validation/: README.md  fidelity_engine.py
validation/results/: fidelity_results.json
